Fix spacing for error alert bubble

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -64,3 +64,7 @@ table {
     color: #46a546;
     padding-right: 10px;
 }
+
+#permalink-input-error {
+    margin-top: 20px;
+}
